[metadata]
name = BnsLib
description = A deep-learning gravitational-wave data analysis library.
author = Marlin Benedikt Schäfer
author_email = marlin.schaefer@aei.mpg.de
license = MIT
license_file = LICENSE
platforms = unix, linux
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    BnsLib
scripts =
    bin/bnslib_generate_samples
install_requires =
    pycbc>=1.18.1
    tensorflow>=2.3.0
    tensorflow_probability>=0.11.1
    pandas>=1.1.3
python_requires =
    >= 3.6
package_dir =
    =src
zip_safe = no
